--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Provides mongoose support for dates only, typically to avoid timezone issues.",
   "main": "index.js",
   "scripts": {
-    "test": "npm test"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
